# TransactionHell

./: .env  Cargo.toml  README.md  docker-compose.yaml
migrations/2024-05-30-155759_create_basic_table/: up.sql
src/: db.rs  entity.rs  error.rs  main.rs  schema.rs  transaction.rs
