[package]
name = "transaction_hell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros", "full", "tracing", "sync"] }
diesel-async = { version = "0.4.1", features = ["postgres", "async-connection-wrapper", "bb8"] }
async-trait = { version = "0.1.77", features = [] }
serde = {version = "1.0.175", features = ["derive"]}
serde_with = { version = "3.1.0"}
serde_json = "1.0.1"
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono", "uuid"] }
thiserror = "1.0.44"
bb8 = "0.8.3"
r2d2 = "0.8.10"
derive_more = "0.99.17"
log = "0.4.21"
parking_lot = "0.12.3"
futures = "0.3.30"
